Align flexed images to prevent stretching

--- a/wp-content/themes/imageshare/assets/css/style.css
+++ b/wp-content/themes/imageshare/assets/css/style.css
@@ -673,8 +673,9 @@ h2.resource-section {
   vertical-align: top;
 }
 .resource-img {
-  width: 100%;
   max-width: 8em;
+  flex: 0 0 auto;
+  align-self: baseline;
 }
 .resource-link {
   font-weight: bold;
@@ -904,11 +905,9 @@ h2.resource-section {
 }
 
 #resource .header img {
-  max-height: 8em;
   max-width: 8em;
-  height: auto;
-  width: auto;
-  flex: 1 0 8em;
+  flex: 0 0 auto;
+  align-self: baseline;
 }
 
 #resource h2 {
@@ -927,7 +926,8 @@ h2.resource-section {
   padding: .5em;
 }
 
-#resource #files li + li {
+#resource #files li + li,
+#resource #collections li + li {
   margin-top: .5em;
 }
 
@@ -1000,13 +1000,11 @@ h2.resource-section {
 }
 
 #resource #collections img {
-  max-width: 8em;
-  max-height: 8em;
-  height: auto;
-  width: auto;
+  max-width: 5em;
+  flex: 0 0 auto;
+  align-self: baseline;
   margin-right: .5em;
   border: 1px solid black;
-  flex: 1 0 8em;
 }
 
 #resource #collections h3 {
@@ -1060,8 +1058,9 @@ h2.resource-section {
 }
 
 .search-results img {
-  max-width: 8em;
-  max-height: 8em;
+  max-width: 5em;
+  flex: 0 0 auto;
+  align-self: baseline;
   border: 1px solid #000;
 }
 
@@ -1092,7 +1091,8 @@ h2.resource-section {
 .search-results #collections img {
   margin-right: .5em;
   max-width: 5em;
-  max-height: 5em;
+  flex: 0 0 auto;
+  align-self: baseline;
 }
 
 /* collection */
